--- a/app/src/main/res/layout/earthquake_list_item.xml
+++ b/app/src/main/res/layout/earthquake_list_item.xml
@@ -5,39 +5,55 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
+
     <TextView
         android:id="@+id/magnitude"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:background="@drawable/magnitude_circle"
+        tools:text="2.3" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+    <TextView
+        android:id="@+id/location_offset"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        tools:text="30km S of" />
+    <TextView
+        android:id="@+id/primary_location"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:textStyle="bold"
+        tools:text="San Francisco, CA" />
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        tools:text="2.3" />
-
-    <TextView
-        android:id="@+id/location_offset"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        tools:text="30km S of" />
-
-    <TextView
-        android:id="@+id/primary_location"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        tools:text="San Francisco, CA" />
-
+        android:orientation="vertical">
     <TextView
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         tools:text="2018-02-10"/>
 
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         tools:text="3:00 PM" />
+
+    </LinearLayout>
 
 </LinearLayout>
